--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "clsx": "^2.0.0",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
@@ -34,4 +36,3 @@
     "vite": "^5.0.8"
   }
 }
-
