Fixed build issues, mobile rendering of article title, back navigation scroll issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,8 +30,10 @@
         }
     },
     "include": [
-        "**/*.ts",
-        "**/*.tsx"
+        "src/**/*"
+    ],
+    "exclude": [
+        "vite.config.ts"
     ],
     "references": [
         {
